tests/baselines/reference/ambiguousOverload(strict=true).errors.txt
ambiguousOverload.ts(1,28): error TS7006: Parameter 'y' implicitly has an 'any' type.
ambiguousOverload.ts(2,28): error TS7006: Parameter 'x' implicitly has an 'any' type.
ambiguousOverload.ts(5,5): error TS2322: Type 'number' is not assignable to type 'string'.
ambiguousOverload.ts(7,29): error TS7006: Parameter 'x' implicitly has an 'any' type.
ambiguousOverload.ts(8,29): error TS7006: Parameter 'y' implicitly has an 'any' type.
ambiguousOverload.ts(11,5): error TS2322: Type 'string' is not assignable to type 'number'.


==== ambiguousOverload.ts (6 errors) ====
    function foof(bar: string, y): number;
                               ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
    function foof(bar: string, x): string;
                               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    function foof(bar: any): any { return bar };
    var x: number = foof("s", null);
    var y: string = foof("s", null);
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    function foof2(bar: string, x): string;
                                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    function foof2(bar: string, y): number;
                                ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
    function foof2(bar: any): any { return bar };
    var x2: string = foof2("s", null);
    var y2: number = foof2("s", null);
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.